updated locales for 1.1

--- a/passwordexporter/chrome/locale/da-DK/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/da-DK/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Kodeordseksporter (.xml, .csv)
 passwordexporter.alert-rejected-exported=Afvist-listen er blevet eksporteret korrekt.
 passwordexporter.alert-wrong-file-saved=Dette er en gemte kodeord-fil. Brug venligst Import-knappen herover for at importere denne fil.
 passwordexporter.alert-rejected-imported=Afvist-liste korrekt importeret!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
