--- a/passwordexporter/chrome/locale/de-DE/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/de-DE/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Passwort Exporte (.xml, .csv)
 passwordexporter.alert-rejected-exported=Die abgewiesene Liste wurde erfolgreich exportiert!
 passwordexporter.alert-wrong-file-saved=Dies ist eine Datei mit gespeicherten Passwörtern. Bitte nutzen Sie die Import-Funktion um die Datei zu importieren.
 passwordexporter.alert-rejected-imported=Die abgewiesene Liste wurde erfolgreich importiert!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
