--- a/passwordexporter/chrome/locale/es-AR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/es-AR/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Importar contraseñas recordadas desde un archivo XML/CSV">
 <!ENTITY passwordexporter.import-saved-button "Importar contraseñas">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Importar/Exportar contraseñas ignoradas">
 <!ENTITY passwordexporter.rejected-desc "Importar/Exportar sitios a los que nunca se les guarda su contraseña.">
 <!ENTITY passwordexporter.rejected-export-button "Exportar lista">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "S">
 <!ENTITY passwordexporter.notice-decline "No acepto">
 <!ENTITY passwordexporter.notice-decline-accesskey "N">
-<!ENTITY passwordexporter.details-line1 "Las entradas de contraseñas no son exportadas cuando Firefox no puede acceder a ellas correctamente. Esto usualmente se debe a cambios en los archivos signons.txt o key3.db">
-<!ENTITY passwordexporter.details-line2 "Las siguientes entradas no fueron exportadas:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
