--- a/passwordexporter/chrome/locale/es-AR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/es-AR/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Archivos de Contraseñas exportadas (.xm
 passwordexporter.alert-rejected-exported=¡La lista de contraseñas ignoradas ha sido exportada con éxito!
 passwordexporter.alert-wrong-file-saved=Éste es un archivo de contraseñas recordadas. Por favor use el botón \"Importar\" de arriba para importar éste archivo.
 passwordexporter.alert-rejected-imported=¡La lista de ignoradas ha sido importada con éxito!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
