--- a/passwordexporter/chrome/locale/es-ES/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/es-ES/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Contraseñas exportadas (.xml, .csv)
 passwordexporter.alert-rejected-exported=¡La lista de rechazadas ha sido exportada con éxito!
 passwordexporter.alert-wrong-file-saved=Éste es un archivo de contraseñas guardadas. Por favor use el botón Importar de arriba para importar éste archivo.
 passwordexporter.alert-rejected-imported=¡La lista de rechazadas ha sido importada con éxito!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
