--- a/passwordexporter/chrome/locale/fa-IR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/fa-IR/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "XML/CSV ایمپورت پسوردهای ذخیره شده از یک فایل">
 <!ENTITY passwordexporter.import-saved-button "ایمپورت کلمات عبور">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "ایمپورت/اکسپورت کلمات عبور رد شده">
 <!ENTITY passwordexporter.rejected-desc ".ایمپورت/اکسپورت سایت هایی که نباید کلمه عبور شما را ذخیره کنند">
 <!ENTITY passwordexporter.rejected-export-button "اکسپورت لیست">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "انصراف">
 <!ENTITY passwordexporter.notice-decline-accesskey "D">
-<!ENTITY passwordexporter.details-line1 ".باشد signons.txt or key3.db کلمات عبور شما امکان اکسپورت ندارند.ممکن است دلیل آن ایجاد تغییر در فایل های">
-<!ENTITY passwordexporter.details-line2 "داده های زیر اکسپورت نشدند">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
