--- a/passwordexporter/chrome/locale/fa-IR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/fa-IR/passwordexporter.properties
@@ -1,10 +1,10 @@
-extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=ایمپورت و اکسپورت کلمات عبور شما بین چند کامپیوتر
+extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=ایمپورت و اکسپورت گذر واژه های شما
 passwordexporter.name=Password Exporter
-passwordexporter.button-label=ایمپورت/اکسپورت کلمات عبور
-passwordexporter.button-accesskey=p
+passwordexporter.button-label=ایمپورت/اکسپورت گذر واژه ها
+passwordexporter.button-accesskey=ا
 passwordexporter.filepicker-title=انتخاب یک فایل
-passwordexporter.alert-cannot-import=.ایمپورت از این فایل امکانپذیر نیست
-passwordexporter.alert-xml-error=.ایمپورت کلمات عبور امکانپذیر نیست.XML خطا در تجزیه
+passwordexporter.alert-cannot-import=ایمپورت از این فایل امکان پذیر نیست.
+passwordexporter.alert-xml-error=خطا در تجزیه XML.ایمپورت کلمات عبور امکانپذیر نیست.
 passwordexporter.alert-wrong-version=نسخه برنامه ای که این فایل را اکسپورت کرده است از نسخه موجود روی این کامپیوتر جدیدتر است.برنامه را به آخرین نسخه ارتقا دهید
 passwordexporter.alert-passwords-exported=.کلمه عبور با موفقیت اکسپورت شد %S
 passwordexporter.alert-passwords-failed=.کلمه عبور وجود ندارد %S امکان اکسپورت کردن
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=اکسپورت کلمه عبور
 passwordexporter.alert-rejected-exported=.لیست کلمات عبور رد شده با موفقیت اکسپورت شد
 passwordexporter.alert-wrong-file-saved=این فایل شامل کلمات عبور ذخیره شده است.برای ایمپورت آن از کلید ایمپورت استفاده کنید
 passwordexporter.alert-rejected-imported=.لیست کلمات عبور رد شده با موفقیت ایمپورت شد
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
