--- a/passwordexporter/chrome/locale/fr-FR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/fr-FR/passwordexporter.properties
@@ -11,9 +11,10 @@ passwordexporter.alert-passwords-failed=%S mots de passe n'ont pu être exporté
 passwordexporter.show-details=Informations
 passwordexporter.filepicker-save-xml=Exportation des mots de passe (.XML)
 passwordexporter.filepicker-save-csv=Exportation des mots de passe (.CVS)
-passwordexporter.alert-wrong-file-reject=Ceci est un fichier contenant des mots de passe rejetés. Veuillez utiliser le bouton d'importation de liste ci-dessous pour importer ce fichier.
+passwordexporter.alert-wrong-file-reject=Ceci est un fichier contenant des sites dont les identifiants ne sont pas mémorisés. Veuillez utiliser le bouton d'importation de liste ci-dessous pour importer ce fichier.
 passwordexporter.alert-passwords-imported=Les mots de passe enregistrés ont été exportés avec succès !
 passwordexporter.filepicker-open-xmlcsv=Exportation des mots de passe (.XML, .CVS)
-passwordexporter.alert-rejected-exported=La liste des mots de passe rejetés a été exportée avec succès !
-passwordexporter.alert-wrong-file-saved=Ceci est un fichier contenant des mots de passe enregistrés. Veuillez utiliser le bouton d'importation ci-dessous pour importer ce fichier.
-passwordexporter.alert-rejected-imported=La liste de mots de passe rejetés a été importée avec succès !
+passwordexporter.alert-rejected-exported=La liste des sites dont les identifiants ne sont pas mémorisés a été exportée avec succès !
+passwordexporter.alert-wrong-file-saved=Ceci est un fichier contenant des mots de passe enregistrés. Veuillez utiliser le bouton d'importation ci-dessus pour importer ce fichier.
+passwordexporter.alert-rejected-imported=La liste des sites dont les identifiants ne sont pas mémorisés a été importée avec succès !
+passwordexporter.filepicker-open-xml=Exportation des mots de passe (.xml)
