--- a/passwordexporter/chrome/locale/hr-HR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/hr-HR/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Izvoz lozinki (.xml, .csv)
 passwordexporter.alert-rejected-exported=Popis odbijenih lozinki je uspješno izvezen!
 passwordexporter.alert-wrong-file-saved=Ovo je datoteka spremljenih lozinki. Molimo Vas, korisitite gornji gumb Uvezi popis za uvoz ove datoteke.
 passwordexporter.alert-rejected-imported=Popis odbijenih lozinki je uspješno uvezen!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
