--- a/passwordexporter/chrome/locale/hu-HU/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/hu-HU/passwordexporter.dtd
@@ -1,4 +1,4 @@
-<!ENTITY passwordexporter.name "Jelszóexportáló">
+<!ENTITY passwordexporter.name "Password Exporter">
 <!ENTITY passwordexporter.dialog-title "Jelszó Importálása/Exportálása">
 <!ENTITY passwordexporter.export-saved-caption "Mentett jelszavak exportálása">
 <!ENTITY passwordexporter.export-saved-desc "Mentett jelszavak exportálása XML/CSV fájlba.">
@@ -7,9 +7,13 @@
 <!ENTITY passwordexporter.export-saved-button "Jelszavak exportálása">
 <!ENTITY passwordexporter.export-saved-button-accesskey "E">
 <!ENTITY passwordexporter.import-saved-caption "Mentett jelszavak importálása">
-<!ENTITY passwordexporter.import-saved-desc "Mentett jelszavak importálása XML/CSV fájlból">
+<!ENTITY passwordexporter.import-saved-desc "Mentett jelszavak importálása XML/CSV fájlból.">
 <!ENTITY passwordexporter.import-saved-button "Jelszavak importálása">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Importálás megszakítása">
+<!ENTITY passwordexporter.import-cancelled "Az importálás meg lett szakítva.">
+<!ENTITY passwordexporter.import-complete "Az importálás sikeresen befejeződött.">
+<!ENTITY passwordexporter.view-details "Részletek">
 <!ENTITY passwordexporter.rejected-caption "Nem menthető jelszavak Importálása/Exportálása">
 <!ENTITY passwordexporter.rejected-desc "Weboldalak Importálása/Exportálása, amelyeken a jelszavak nem menthetőek el.">
 <!ENTITY passwordexporter.rejected-export-button "Lista exportálása">
@@ -17,15 +21,19 @@
 <!ENTITY passwordexporter.rejected-import-button "Lista importálása">
 <!ENTITY passwordexporter.rejected-import-button-accesskey "m">
 <!ENTITY passwordexporter.view-passwords "Mentett jelszavak megtekintése">
-<!ENTITY passwordexporter.view-passwords-accesskey "V">
-<!ENTITY passwordexporter.close-label "Bezár">
-<!ENTITY passwordexporter.notice-title "Jelszó exportáló megjegyzések">
-<!ENTITY passwordexporter.notice-line1 "Köszönjük, hogy letöltötte a Jelszó exportáló Kiterjesztést.">
-<!ENTITY passwordexporter.notice-line2 "Mielött használatba venné a programot, jegyezze meg az alábbiakat:">
+<!ENTITY passwordexporter.view-passwords-accesskey "s">
+<!ENTITY passwordexporter.close-label "Bezárás">
+<!ENTITY passwordexporter.notice-title "Password Exporter megjegyzések">
+<!ENTITY passwordexporter.notice-line1 "Köszönjük, hogy letöltötte a Password Exporter kiterjesztést.">
+<!ENTITY passwordexporter.notice-line2 "Mielőtt használatba venné a programot, jegyezze meg az alábbiakat:">
 <!ENTITY passwordexporter.notice-line3 "A Kiterjesztés csak saját felelősségre használható. Nem kizárható, hogy az exportált jelszavak harmadik fél számára is hozzáférhetőek, még akkor is, ha azok kódolva kerültek mentésre.">
 <!ENTITY passwordexporter.notice-accept "Elfogadás">
 <!ENTITY passwordexporter.notice-accept-accesskey "E">
 <!ENTITY passwordexporter.notice-decline "Elutasítás">
 <!ENTITY passwordexporter.notice-decline-accesskey "u">
-<!ENTITY passwordexporter.details-line1 "A jelszavak nem exportálhatóak ha a Firefox nem éri el őket megfelelőképpen. Ez a probléma a signons.txt vagy key3.db fájlok megváltozására vezethető vissza.">
-<!ENTITY passwordexporter.details-line2 "A következő bejegyzések nem exportálhatók:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Exportálás részletei">
+<!ENTITY passwordexporter.export-details-line1 "Az elmentett bejelentkezések nem exportálhatók, ha nem érhetők el megfelelően. Ez rendszerint a signons.txt és key3.db fájlokkal kapcsolatos változtatások hatására következik be.">
+<!ENTITY passwordexporter.export-details-line2 "A következő belépések nem exportálhatók:">
+<!ENTITY passwordexporter.import-details-title "Password Expoter: Importálás részletei">
+<!ENTITY passwordexporter.import-details-line1 "Az elmentett bejelentkezések nem importálhatók, ha már azonos bejelentkezés létezik a Jelszókezelőben.">
+<!ENTITY passwordexporter.import-details-line2 "A következő belépések nem importálhatók:">
