--- a/passwordexporter/chrome/locale/hu-HU/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/hu-HU/passwordexporter.properties
@@ -1,12 +1,12 @@
 extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=Exportálja és importálja az elmentett jelszavakat.
-passwordexporter.name=Jelszóexportáló
+passwordexporter.name=Password Exporter
 passwordexporter.button-label=Jelszavak Importálása/Exportálása
-passwordexporter.button-accesskey=c
+passwordexporter.button-accesskey=J
 passwordexporter.filepicker-title=Válasszon fájlt
-passwordexporter.alert-cannot-import=Ebből a fájlból nem lehet importálni
+passwordexporter.alert-cannot-import=Ebből a fájlból nem lehet importálni.
 passwordexporter.alert-xml-error=XML feldolgozási hiba. Jelszavakat nem lehet importálni.
 passwordexporter.alert-wrong-version=A fájlból importálni csak a program újabb verziójával lehetséges. Kérem frissítsen a legújabb verzióra.
-passwordexporter.alert-passwords-exported=%S jelszavak exportálása sikeresen befejeződött!
+passwordexporter.alert-passwords-exported=%S jelszó exportálása sikeresen befejeződött!
 passwordexporter.alert-passwords-failed=%S jelszó nem exportálható.
 passwordexporter.show-details=Részletek
 passwordexporter.filepicker-save-xml=Jelszó exportálás (.xml)
@@ -16,4 +16,5 @@ passwordexporter.alert-passwords-imported=A jelszavak importálása sikeresen be
 passwordexporter.filepicker-open-xmlcsv=Jelszó exportálás (.xml, .csv)
 passwordexporter.alert-rejected-exported=A nem menthető jelszavak listájának exportálása sikeresen befejeződött!
 passwordexporter.alert-wrong-file-saved=Ezen fájl mentett jelszavakat tartalmaz. Kérem használja a feljebb elhelyezett Jelszó importálása gombot a fájlból történő importáláshoz.
-passwordexporter.alert-rejected-imported=A jelszavak importálása sikeresen befejeződött!
+passwordexporter.alert-rejected-imported=A nem menthető jelszavak listájának importálása sikeresen befejeződött!
+passwordexporter.filepicker-open-xml=Jelszó exportálás (.xml)
