--- a/passwordexporter/chrome/locale/it-IT/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/it-IT/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Importa le password salvate in un file XML/CSV">
 <!ENTITY passwordexporter.import-saved-button "Importa le password">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Importazione/Esportazione password non salvate">
 <!ENTITY passwordexporter.rejected-desc "Importa/Esporta i siti che non salvano le password">
 <!ENTITY passwordexporter.rejected-export-button "Esporta la lista">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "Rifiuto">
 <!ENTITY passwordexporter.notice-decline-accesskey "R">
-<!ENTITY passwordexporter.details-line1 "Quando Firefox non può accedere alle password inserite queste non vengono esportate correttamente. Questo comportamento è solitamente imputabile a cambiamenti nei file: signons.txt o key3.db.">
-<!ENTITY passwordexporter.details-line2 "I seguenti elementi non sono stati esportati:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
