--- a/passwordexporter/chrome/locale/it-IT/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/it-IT/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Password esportate (.xml, .csv)
 passwordexporter.alert-rejected-exported=La lista delle password non salvate è stata esportata con successo
 passwordexporter.alert-wrong-file-saved=Questo file contiene le password salvate. Utilizzare la funzione di importazione
 passwordexporter.alert-rejected-imported=La lista delle password non salvate è stata importata con successo
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
