--- a/passwordexporter/chrome/locale/nl-NL/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/nl-NL/passwordexporter.dtd
@@ -1,31 +1,39 @@
 <!ENTITY passwordexporter.name "Password Exporter">
 <!ENTITY passwordexporter.dialog-title "Wachtwoorden importeren/exporteren">
 <!ENTITY passwordexporter.export-saved-caption "Opgeslagen wachtwoorden exporteren">
-<!ENTITY passwordexporter.export-saved-desc "Opgeslagen wachtwoorden exporteren naar een XML/CSV bestand">
+<!ENTITY passwordexporter.export-saved-desc "Opgeslagen wachtwoorden exporteren naar een XML of CSV bestand">
 <!ENTITY passwordexporter.export-saved-encrypt "Wachtwoorden versleutelen">
 <!ENTITY passwordexporter.export-saved-encrypt-accesskey "s">
 <!ENTITY passwordexporter.export-saved-button "Wachtwoorden exporteren">
 <!ENTITY passwordexporter.export-saved-button-accesskey "E">
 <!ENTITY passwordexporter.import-saved-caption "Opgeslagen wachtwoorden importeren">
-<!ENTITY passwordexporter.import-saved-desc "Opgeslagen wachtwoorden importeren uit een XML/CSV bestand">
+<!ENTITY passwordexporter.import-saved-desc "Opgeslagen wachtwoorden importeren uit een XML of CSV bestand">
 <!ENTITY passwordexporter.import-saved-button "Wachtwoorden importeren">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
-<!ENTITY passwordexporter.rejected-caption "Afgewezen wachtwoorden importeren/exporteren">
-<!ENTITY passwordexporter.rejected-desc "Sites die uw wachtwoord nooit opslaan importeren/exporteren">
-<!ENTITY passwordexporter.rejected-export-button "Lijst exporteren">
+<!ENTITY passwordexporter.import-cancel "Importeren afbreken">
+<!ENTITY passwordexporter.import-cancelled "Importeren afgebroken">
+<!ENTITY passwordexporter.import-complete "Importeren afgerond">
+<!ENTITY passwordexporter.view-details "Details bekijken">
+<!ENTITY passwordexporter.rejected-caption "Uitgeschakelde hosts importeren/exporteren">
+<!ENTITY passwordexporter.rejected-desc "Sites die uw wachtwoord nooit opslaan importeren/exporteren.">
+<!ENTITY passwordexporter.rejected-export-button "Uitgeschakelde hosts exporteren">
 <!ENTITY passwordexporter.rejected-export-button-accesskey "x">
-<!ENTITY passwordexporter.rejected-import-button "Lijst importeren">
+<!ENTITY passwordexporter.rejected-import-button "Uitgeschakelde hosts importeren">
 <!ENTITY passwordexporter.rejected-import-button-accesskey "m">
 <!ENTITY passwordexporter.view-passwords "Opgeslagen wachtwoorden bekijken">
 <!ENTITY passwordexporter.view-passwords-accesskey "B">
 <!ENTITY passwordexporter.close-label "Sluiten">
 <!ENTITY passwordexporter.notice-title "Password Exporter bericht">
-<!ENTITY passwordexporter.notice-line1 "Bedankt voor het downloaden van Password Exporter!">
+<!ENTITY passwordexporter.notice-line1 "Bedankt voor het installeren van Password Exporter!">
 <!ENTITY passwordexporter.notice-line2 "Lees dit eerst voordat u gaat exporteren:">
 <!ENTITY passwordexporter.notice-line3 "Deze extensie gebruikt u op eigen risico. Het is mogelijk dat uw geëxporteerde wachtwoorden worden gestolen of gelezen door anderen, zelfs als u ze versleutelt.">
-<!ENTITY passwordexporter.notice-accept "Dit accepteer ik">
+<!ENTITY passwordexporter.notice-accept "Accepteren">
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
-<!ENTITY passwordexporter.notice-decline "Dit wijs ik af">
-<!ENTITY passwordexporter.notice-decline-accesskey "W">
-<!ENTITY passwordexporter.details-line1 "Ingegeven wachtwoorden worden niet geëxporteerd wanneer Firefox ze niet correct kan benaderen. Dit hangt gewoonlijk samen met wijzigingen in uw signons.txt of key3.db bestanden.">
-<!ENTITY passwordexporter.details-line2 "De volgende elementen zijn niet geëxporteerd:">
+<!ENTITY passwordexporter.notice-decline "Annuleren">
+<!ENTITY passwordexporter.notice-decline-accesskey "u">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Details exporteren">
+<!ENTITY passwordexporter.export-details-line1 "Opgeslagen inloggegevens worden niet geëxporteerd wanneer ze niet normaal kunnen worden benaderd. Dit hangt normaliter samen met wijzigingen in de bestanden bestanden signon.txt of key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "De volgende inloggegevens konden niet worden geëxporteerd:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Details importeren">
+<!ENTITY passwordexporter.import-details-line1 "Opgeslagen inloggegevens kunnen meestal niet worden geïmporteerd als dezelfde gegevens al in de Wachtwoordbeheerder aanwezif zijn.">
+<!ENTITY passwordexporter.import-details-line2 "De volgende inloggegevens konden niet worden geïmporteerd:">
