--- a/passwordexporter/chrome/locale/nl-NL/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/nl-NL/passwordexporter.properties
@@ -1,19 +1,20 @@
-extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=Wissel uw opgeslagen wachtwoorden uit tussen computers
+extensions.{B17C1C5A-04B1-11DB-9804-B622A1EF5492}.description=Exporteer en importeer uw opgeslagen wachtwoorden.
 passwordexporter.name=Password Exporter
 passwordexporter.button-label=Wachtwoorden importeren/exporteren
 passwordexporter.button-accesskey=W
 passwordexporter.filepicker-title=Selecteer een bestand
-passwordexporter.alert-cannot-import=Vanuit dit bestand kan niet worden geïmporteerd
+passwordexporter.alert-cannot-import=Vanuit dit bestand kan niet worden geïmporteerd.
 passwordexporter.alert-xml-error=XML ontleedfout. Importeren van wachtwoorden mislukt.
-passwordexporter.alert-wrong-version=De versie van Password Exporter die is gebruikt om dit bestand te exporteren is nieuwer dan de versie op deze computer. Werk s.v.p. bij naar de nieuwste versie om te kunnen importeren.
+passwordexporter.alert-wrong-version=De versie van Password Exporter die is gebruikt om dit bestand te exporteren is nieuwer dan de versie op deze computer. Werk a.u.b. bij naar de nieuwste versie om te kunnen importeren.
 passwordexporter.alert-passwords-exported=De opgeslagen wachtwoorden zijn succesvol geëxporteerd!
 passwordexporter.alert-passwords-failed=%S wachtwoorden konden niet worden geëxporteerd.
 passwordexporter.show-details=Details weergeven
-passwordexporter.filepicker-save-xml=Wachtwoorden exporteren (.xml)
-passwordexporter.filepicker-save-csv=Wachtwoorden exporteren (.csv)
-passwordexporter.alert-wrong-file-reject=Dit is een bestand met afgewezen wachtwoorden. Gebruik s.v.p. de 'Lijst importeren' knop hieronder om dit bestand te importeren.
+passwordexporter.filepicker-save-xml=Wachtwoord-exportbestand (.xml)
+passwordexporter.filepicker-save-csv=Wachtwoord-exportbestand (.csv)
+passwordexporter.alert-wrong-file-reject=Dit is een bestand met uitgeschakelde hosts. Gebruik a.u.b. de 'Uitgeschakelde hosts importeren' knop hieronder om dit bestand te importeren.
 passwordexporter.alert-passwords-imported=De opgeslagen wachtwoorden zijn succesvol geïmporteerd!
-passwordexporter.filepicker-open-xmlcsv=Wachtwoorden exportbestanden (.xml, .csv)
-passwordexporter.alert-rejected-exported=De afgewezen lijst is succesvol geëxporteerd!
-passwordexporter.alert-wrong-file-saved=Dit is een bestand met opgeslagen wachtwoorden. Gebruik s.v.p. de 'Wachtwoorden importeren' knop hierboven om dit bestand te importeren.
-passwordexporter.alert-rejected-imported=De afgewezen lijst is succesvol geïmporteerd!
+passwordexporter.filepicker-open-xmlcsv=Wachtwoord-exportbestanden (.xml, .csv)
+passwordexporter.alert-rejected-exported=De lijst met uitgeschakelde hosts is succesvol geëxporteerd!
+passwordexporter.alert-wrong-file-saved=Dit is een bestand met opgeslagen wachtwoorden. Gebruik a.u.b. de 'Wachtwoorden importeren' knop hierboven om dit bestand te importeren.
+passwordexporter.alert-rejected-imported=De lijst met uitgeschakelde hosts is succesvol geïmporteerd!
+passwordexporter.filepicker-open-xml=Wachtwoord-exportbestanden (.xml)
