--- a/passwordexporter/chrome/locale/pl-PL/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/pl-PL/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Eksport informacji  (*.xml, *.csv)
 passwordexporter.alert-rejected-exported=Adresy witryn, dla których nie są zapisywane informacje o logowaniu zostały wyeksportowane
 passwordexporter.alert-wrong-file-saved=To jest plik z informacjami o logowaniu. Proszę użyć przycisku \"Importuj\", aby zaimportować te informacje.
 passwordexporter.alert-rejected-imported=Adresy witryn, dla których nie są zapisywane informacje o logowaniu zostały zaimportowane
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
