--- a/passwordexporter/chrome/locale/pt-BR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/pt-BR/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Exportação de senhas (.xml, .csv)
 passwordexporter.alert-rejected-exported=A lista de sites rejeitados foi exportada com sucesso!
 passwordexporter.alert-wrong-file-saved=Este é um arquivo de senhas salvas. Por favor, utilize o botão Importar abaixo para importar este arquivo.
 passwordexporter.alert-rejected-imported=A lista de sites rejeitados foi importada com sucesso!
+passwordexporter.filepicker-open-xml=Exportações de senhas (.xml)
