--- a/passwordexporter/chrome/locale/ru-RU/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/ru-RU/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Импорт сохранённых паролей из XML-файла.">
 <!ENTITY passwordexporter.import-saved-button "Импортировать пароли">
 <!ENTITY passwordexporter.import-saved-button-accesskey "И">
+<!ENTITY passwordexporter.import-cancel "Отмена импорта">
+<!ENTITY passwordexporter.import-cancelled "Импорт отменен">
+<!ENTITY passwordexporter.import-complete "Импорт завершен">
+<!ENTITY passwordexporter.view-details "Просмотр деталей">
 <!ENTITY passwordexporter.rejected-caption "Импорт/Экспорт сайтов, чьи пароли никогда не будут сохраняться">
 <!ENTITY passwordexporter.rejected-desc "Импорт/Экспорт списка сайтов, чьи пароли никогда не будут сохраняться">
 <!ENTITY passwordexporter.rejected-export-button "Экспортировать список">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "П">
 <!ENTITY passwordexporter.notice-decline "Не принимаю">
 <!ENTITY passwordexporter.notice-decline-accesskey "Н">
-<!ENTITY passwordexporter.details-line1 "Пароли не были экспортированы из-за того, что Firefox не может получить к ним доступ.Обычно это связано с изменениями в файлах signons.txt и key3.db .">
-<!ENTITY passwordexporter.details-line2 "Эти пароли не были экспортированы:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Детали экспорта">
+<!ENTITY passwordexporter.export-details-line1 "Сохраненные имена пользователей не могут быть экспортированы, если к ним нет доступа. Обычно это происходит из-за изменений в файлах signons.txt или key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "Следующие имена пользователей не могут быть экспортированы:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Детали импорта">
+<!ENTITY passwordexporter.import-details-line1 "Сохраненные имена пользователей обычно не могут быть импортированы, если такое имя уже есть.">
+<!ENTITY passwordexporter.import-details-line2 "Следующие имена пользователей не могут быть импортированы:">
