--- a/passwordexporter/chrome/locale/sk-SK/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/sk-SK/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Importovať uložené heslá z textového súboru XML.">
 <!ENTITY passwordexporter.import-saved-button "Importovať heslá">
 <!ENTITY passwordexporter.import-saved-button-accesskey "i">
+<!ENTITY passwordexporter.import-cancel "Zrušiť import">
+<!ENTITY passwordexporter.import-cancelled "Import bol zrušený">
+<!ENTITY passwordexporter.import-complete "Import bol úspešne ukončený">
+<!ENTITY passwordexporter.view-details "Zobraziť podrobnosti">
 <!ENTITY passwordexporter.rejected-caption "Importovať/Exportovať heslá, ktoré sa neukladajú">
 <!ENTITY passwordexporter.rejected-desc "Importovať/Exportovať stránky, na ktorých sa heslá nikdy neukladajú.">
 <!ENTITY passwordexporter.rejected-export-button "Exportovať zoznam">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "s">
 <!ENTITY passwordexporter.notice-decline "Nesúhlasím">
 <!ENTITY passwordexporter.notice-decline-accesskey "n">
-<!ENTITY passwordexporter.details-line1 "Heslá nie sú exportované keď k ním Firefox nemá riadny prístup. Toto je zvyčajne spojené so zmenami v súboroch signons.txt alebo key3.db.">
-<!ENTITY passwordexporter.details-line2 "Nasledujúce heslá neboli exportované.">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Podrobnosti exportu">
+<!ENTITY passwordexporter.export-details-line1 "Uložené prihlásenia nie sú exportované v prípade, že prístup k nim nie je možný. Takéto situácie nastávajú v súvislosti so zmenami v súboroch signons.txt a key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "Nasledujúce prihlásenia nebolo možné exportovať:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Importovať podrobnosti">
+<!ENTITY passwordexporter.import-details-line1 "Import uložených prihlásení zvyčajne zlyháva v prípade, že rovnaké prihlásenie už v Správcovi hesiel existuje.">
+<!ENTITY passwordexporter.import-details-line2 "Nasledujúce prihlásenia nebolo možné importovať:">
