--- a/passwordexporter/chrome/locale/sk-SK/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/sk-SK/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Exportovať heslá (.xml,.csv)
 passwordexporter.alert-rejected-exported=Zoznam hesiel, ktoré sa neukladajú bol úspešne exportovaný!
 passwordexporter.alert-wrong-file-saved=Toto je súbor s uloženými heslami. Prosím, použite vyššie umiestnené tlačidlo Imortovať heslá na importovanie tohto súboru.
 passwordexporter.alert-rejected-imported=Uložené heslá boli úspešne importované!
+passwordexporter.filepicker-open-xml=Exporty hesiel (.xml)
