--- a/passwordexporter/chrome/locale/sq-AL/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/sq-AL/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Import saved passwords from an XML/CSV file.">
 <!ENTITY passwordexporter.import-saved-button "Import Passwords">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Import/Export Rejected Passwords">
 <!ENTITY passwordexporter.rejected-desc "Import/Export sites that never save your password.">
 <!ENTITY passwordexporter.rejected-export-button "Export List">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "I Decline">
 <!ENTITY passwordexporter.notice-decline-accesskey "D">
-<!ENTITY passwordexporter.details-line1 "Password entries are not exported when Firefox cannot access them properly. This is usually related to changes in your signons.txt or key3.db files.">
-<!ENTITY passwordexporter.details-line2 "The following entries were not exported:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
