--- a/passwordexporter/chrome/locale/sq-AL/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/sq-AL/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Password Exports (.xml, .csv)
 passwordexporter.alert-rejected-exported=Rejected list has been exported successfully!
 passwordexporter.alert-wrong-file-saved=This is a saved passwords file. Please use the Import button above to import this file.
 passwordexporter.alert-rejected-imported=Rejected list has been imported successfully!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
