--- a/passwordexporter/chrome/locale/tr-TR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/tr-TR/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Parolaları bir XML/CSV Dosysasından Al.">
 <!ENTITY passwordexporter.import-saved-button "Parolaları Al">
 <!ENTITY passwordexporter.import-saved-button-accesskey "L">
+<!ENTITY passwordexporter.import-cancel "Almaktan Vazgeç">
+<!ENTITY passwordexporter.import-cancelled "Alma iptal edildi">
+<!ENTITY passwordexporter.import-complete "Alma işi tamamlandı">
+<!ENTITY passwordexporter.view-details "Detayları Göster">
 <!ENTITY passwordexporter.rejected-caption "iptal Edilmiş Parolaları Al/Ver">
 <!ENTITY passwordexporter.rejected-desc "Parolanızı Kaydeden Siteleri Al/Ver.">
 <!ENTITY passwordexporter.rejected-export-button "Liste Ver">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "K">
 <!ENTITY passwordexporter.notice-decline "Kabul Etmiyorum">
 <!ENTITY passwordexporter.notice-decline-accesskey "R">
-<!ENTITY passwordexporter.details-line1 "Bazı Parola kayırları firefox kendilerine erişilemediği için aktarılamadı. Bu genellikle signons.txt yada key.db dosyalarıyla alakalıdır.">
-<!ENTITY passwordexporter.details-line2 "Bazı kayırlar Aktarılamadı:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Detayları Ver">
+<!ENTITY passwordexporter.export-details-line1 "Kayıtlı girişler düzgün değilse verilemeyebilir. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "Şu girişler dışa verilemiyor:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: içe Aktarma detayları">
+<!ENTITY passwordexporter.import-details-line1 "Kayıtlı girişler Parola yöneticisinde aynı kayıt varsa alınamayabilir.">
+<!ENTITY passwordexporter.import-details-line2 "Şu girişler içeri aktarılamadı:">
