--- a/passwordexporter/chrome/locale/tr-TR/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/tr-TR/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Verilen Parolalar (.xml, .csv)
 passwordexporter.alert-rejected-exported=İptal listesi Başarıyla Verildi!
 passwordexporter.alert-wrong-file-saved=Bu bir Kayıtlı Parolalar Dosyasıdır. Bu dosyadan almak için lütfen Parola Al butonunu kullanın.
 passwordexporter.alert-rejected-imported=İptal listesi Başarıyla Alındı!
+passwordexporter.filepicker-open-xml=Verilen Parolalar (.xml)
