--- a/passwordexporter/chrome/locale/uk-UA/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/uk-UA/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Імпорт збережених паролів з XML-файла.">
 <!ENTITY passwordexporter.import-saved-button "Імпортувати паролі">
 <!ENTITY passwordexporter.import-saved-button-accesskey "І">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Імпорт/Експорт сайтів, чиї паролі ніколи не зберігатимуться">
 <!ENTITY passwordexporter.rejected-desc "Імпорт/Експорт списку сайтів, чиї паролі ніколи не зберігатимуться">
 <!ENTITY passwordexporter.rejected-export-button "Експортувати список">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "П">
 <!ENTITY passwordexporter.notice-decline "Не приймаю">
 <!ENTITY passwordexporter.notice-decline-accesskey "Н">
-<!ENTITY passwordexporter.details-line1 "Значення паролів не експортуються, коли Firefox не може отримати доступ до них належним образом. Це зазвичай пов&apos;язано із змінами у ваших signons.txt або key3.db файлах.">
-<!ENTITY passwordexporter.details-line2 "Наступні значення не були експортовані:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
