--- a/passwordexporter/chrome/locale/uk-UA/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/uk-UA/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=Експортовані паролі (.
 passwordexporter.alert-rejected-exported=Список
 passwordexporter.alert-wrong-file-saved=Цей файл - експортований список паролів. Для імпорту цього списку використовуйте кнопку 'Імпортувати паролі'
 passwordexporter.alert-rejected-imported=Імпорт списку сайтів, чиї паролі ніколи не зберігатимуться завершено успішно!
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
