--- a/passwordexporter/chrome/locale/zh-TW/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/zh-TW/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "從 XML 檔案匯入已存密碼">
 <!ENTITY passwordexporter.import-saved-button "匯入密碼(I)">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "匯入／匯出 永不儲存密碼">
 <!ENTITY passwordexporter.rejected-desc "匯入／匯出 永不儲存密碼的網站">
 <!ENTITY passwordexporter.rejected-export-button "匯出列表(x)">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "我拒絕(D)">
 <!ENTITY passwordexporter.notice-decline-accesskey "D">
-<!ENTITY passwordexporter.details-line1 "Password entries are not exported when Firefox cannot access them properly. This is usually related to changes in your signons.txt or key3.db files.">
-<!ENTITY passwordexporter.details-line2 "The following entries were not exported:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
