--- a/passwordexporter/chrome/locale/zh-TW/passwordexporter.properties
+++ b/passwordexporter/chrome/locale/zh-TW/passwordexporter.properties
@@ -17,3 +17,4 @@ passwordexporter.filepicker-open-xmlcsv=匯出密碼(.xml, .csv)
 passwordexporter.alert-rejected-exported=永不儲存密碼之列表已經成功匯出！
 passwordexporter.alert-wrong-file-saved=這個檔案是已存密碼列表。請使用上方的「匯入」按鈕來匯入此檔案。
 passwordexporter.alert-rejected-imported=永不儲存密碼之列表已經成功匯入！
+passwordexporter.filepicker-open-xml=Password Exports (.xml)
