--- a/passwordexporter/chrome/locale/da-DK/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/da-DK/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Importer gemte kodeord fra en XML- eller CSV-fil.">
 <!ENTITY passwordexporter.import-saved-button "Importer kodeord">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Importer/eksporter afviste kodeord">
 <!ENTITY passwordexporter.rejected-desc "Importer/eksporter steder der aldrig gemmer dit kodeord.">
 <!ENTITY passwordexporter.rejected-export-button "Eksporter liste">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "a">
 <!ENTITY passwordexporter.notice-decline "Jeg accepterer IKKE">
 <!ENTITY passwordexporter.notice-decline-accesskey "I">
-<!ENTITY passwordexporter.details-line1 "Kodeordsposter eksporteres ikke når Firefox ikke har fuld adgang til dem. Dette hænger normalt sammen med ændringer i dine signons.txt eller key3.db filer.">
-<!ENTITY passwordexporter.details-line2 "Følgende poster blev ikke eksporteret:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
