--- a/passwordexporter/chrome/locale/de-DE/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/de-DE/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Gespeicherte Passwörter von einer XML/CSV Datei importieren.">
 <!ENTITY passwordexporter.import-saved-button "Passwörter importieren">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Zurückgewiesene Passwörter importieren/exportieren">
 <!ENTITY passwordexporter.rejected-desc "Webseiten importieren/exportieren, die nie Ihre Passwörter speichern.">
 <!ENTITY passwordexporter.rejected-export-button "Liste exportieren">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "Ich lehne ab!">
 <!ENTITY passwordexporter.notice-decline-accesskey "D">
-<!ENTITY passwordexporter.details-line1 "Passwort Einträge werden nicht exportiert, wenn Firefox diese nicht korrekt erkennt. Dies kann an Änderungen der Datei signons.txt oder key3.db liegen.">
-<!ENTITY passwordexporter.details-line2 "Die folgenden Einträge wurden nicht exportiert:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
