--- a/passwordexporter/chrome/locale/hr-HR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/hr-HR/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Uvoz spremljenih lozinki iz XML/CSV datoteke.">
 <!ENTITY passwordexporter.import-saved-button "Uvezi lozinke">
 <!ENTITY passwordexporter.import-saved-button-accesskey "U">
+<!ENTITY passwordexporter.import-cancel "Cancel Import">
+<!ENTITY passwordexporter.import-cancelled "Import Cancelled">
+<!ENTITY passwordexporter.import-complete "Import Complete">
+<!ENTITY passwordexporter.view-details "View Details">
 <!ENTITY passwordexporter.rejected-caption "Uvoz/Izvoz odbijenih lozinki">
 <!ENTITY passwordexporter.rejected-desc "Uvoz/Izvoz stranica koje nikada ne spremaju Vašu lozinku.">
 <!ENTITY passwordexporter.rejected-export-button "Izvezi popis">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "P">
 <!ENTITY passwordexporter.notice-decline "Ne prihvaćam">
 <!ENTITY passwordexporter.notice-decline-accesskey "N">
-<!ENTITY passwordexporter.details-line1 "Unosi lozinki nisu izvezeni kada im Firefox ne može pravilno pristupiti. To je obično povezano s promjenama u Vašim datotekama signons.txt ili key3.db.">
-<!ENTITY passwordexporter.details-line2 "Slijedeći unosi nisu izvezeni:">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: Export Details">
+<!ENTITY passwordexporter.export-details-line1 "Saved logins are not exported when they cannot be accessed properly. This is usually related to changes in your signons.txt or key3.db files.">
+<!ENTITY passwordexporter.export-details-line2 "The following logins could not be exported:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: Import Details">
+<!ENTITY passwordexporter.import-details-line1 "Saved logins usually fail to import when the same login already exists in the Password Manager.">
+<!ENTITY passwordexporter.import-details-line2 "The following logins could not be imported:">
