--- a/passwordexporter/chrome/locale/pl-PL/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/pl-PL/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Import informacji z pliku XML/CSV">
 <!ENTITY passwordexporter.import-saved-button "Importuj">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Anuluj importowanie">
+<!ENTITY passwordexporter.import-cancelled "Importowanie zostało anulowane">
+<!ENTITY passwordexporter.import-complete "Importowanie zostało zakończone">
+<!ENTITY passwordexporter.view-details "Zobacz szczegóły">
 <!ENTITY passwordexporter.rejected-caption "Import/Eksport wyjątków">
 <!ENTITY passwordexporter.rejected-desc "Import/Eksport adresów witryn, dla których nie są zapisywane informacje o logowaniu">
 <!ENTITY passwordexporter.rejected-export-button "Eksportuj">
@@ -22,10 +26,14 @@
 <!ENTITY passwordexporter.notice-title "Password Exporter - informacje">
 <!ENTITY passwordexporter.notice-line1 "Dziękuję za pobranie Password Exporter!">
 <!ENTITY passwordexporter.notice-line2 "Przed wykonaniem eksportu proszę zapoznać się z poniższymi uwagami">
-<!ENTITY passwordexporter.notice-line3 "Rozszerzenie to używasz na swoją odpowiedzialność. Może zdarzyć się, że twoje wyeksportowane dane dotyczące logowania zostaną skradzione lub użyte przez niepowołane osoby, nawet jeśli je zakodujesz.">
-<!ENTITY passwordexporter.notice-accept "Akceptuj">
+<!ENTITY passwordexporter.notice-line3 "Rozszerzenie to używasz na swoją odpowiedzialność. Może zdarzyć się, że wyeksportowane przez ciebie dane logowania zostaną skradzione lub użyte przez niepowołane osoby, nawet jeśli je zakodujesz.">
+<!ENTITY passwordexporter.notice-accept "Akceptuję">
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
-<!ENTITY passwordexporter.notice-decline "Odrzuć">
-<!ENTITY passwordexporter.notice-decline-accesskey "O">
-<!ENTITY passwordexporter.details-line1 "Hasła nie zostaną wyeksportowane jeśli Firefox nie ma do nich dostępu. Przyczyną takiego stanu rzeczy mogą być zmiany dokonane przez użytkownika w plikach signons.txt lub key3.db">
-<!ENTITY passwordexporter.details-line2 "Następujące wpisy nie zostały wyeksportowane:">
+<!ENTITY passwordexporter.notice-decline "Nie akceptuję">
+<!ENTITY passwordexporter.notice-decline-accesskey "N">
+<!ENTITY passwordexporter.export-details-title "Dane szczegółowe eksportu">
+<!ENTITY passwordexporter.export-details-line1 "Dane logowania nie mogą zostać wyeksportowane jeśli nie ma do nich prawidłowego dostępu. Zazwyczaj spowodowane jest to zmianami dokonanymi ręcznie w plikach signons.txt or key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "Nie można wyeksportować następujących danych:">
+<!ENTITY passwordexporter.import-details-title "Dane szczegółowe importu">
+<!ENTITY passwordexporter.import-details-line1 "Nie można zaimportować danych logowania jeśli te same dane znajdują się już w menedżerze haseł.">
+<!ENTITY passwordexporter.import-details-line2 "Nie można zaimportować następujących danych:">
