--- a/passwordexporter/chrome/locale/pt-BR/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/pt-BR/passwordexporter.dtd
@@ -10,6 +10,10 @@
 <!ENTITY passwordexporter.import-saved-desc "Importa senhas salvas de um arquivo XML.">
 <!ENTITY passwordexporter.import-saved-button "Importar senhas">
 <!ENTITY passwordexporter.import-saved-button-accesskey "I">
+<!ENTITY passwordexporter.import-cancel "Cancelar importação">
+<!ENTITY passwordexporter.import-cancelled "Importação cancelada">
+<!ENTITY passwordexporter.import-complete "Importação completa">
+<!ENTITY passwordexporter.view-details "Exibir detalhes">
 <!ENTITY passwordexporter.rejected-caption "Importar/Exportar sites rejeitados">
 <!ENTITY passwordexporter.rejected-desc "Importa/Exporta sites que não devem salvar as suas senhas.">
 <!ENTITY passwordexporter.rejected-export-button "Exportar lista">
@@ -27,5 +31,9 @@
 <!ENTITY passwordexporter.notice-accept-accesskey "C">
 <!ENTITY passwordexporter.notice-decline "Não correrei o risco">
 <!ENTITY passwordexporter.notice-decline-accesskey "N">
-<!ENTITY passwordexporter.details-line1 "As senhas não são exportadas quando o Firefox não pode acessá-las corretamente. Isso normalmente está relacionado a mudanças nos arquivos signons.txt ou key3.db.">
-<!ENTITY passwordexporter.details-line2 "As seguintes senhas não foram exportadas.">
+<!ENTITY passwordexporter.export-details-title "Password Exporter: detalhes da exportação">
+<!ENTITY passwordexporter.export-details-line1 "Senhas e usuários salvos não podem ser exportados quando não puderem ser acessados corretamente. Isso normalmente está relacionado a alterações nos arquivos signons.txt ou key3.db.">
+<!ENTITY passwordexporter.export-details-line2 "Os seguintes usuários e senhas não puderam ser exportados:">
+<!ENTITY passwordexporter.import-details-title "Password Exporter: detalhes de importação">
+<!ENTITY passwordexporter.import-details-line1 "Senhas e usuários salvos normalmente falham ao serem importados quando o usuário já existe no Gerenciador de Senhas.">
+<!ENTITY passwordexporter.import-details-line2 "Os seguintes usuários e senhas não puderam ser importados:">
