--- a/passwordexporter/chrome/locale/en-US/passwordexporter.dtd
+++ b/passwordexporter/chrome/locale/en-US/passwordexporter.dtd
@@ -2,7 +2,7 @@
 <!ENTITY passwordexporter.dialog-title "Import/Export Passwords">
 <!ENTITY passwordexporter.export-saved-caption "Export Saved Passwords">
 <!ENTITY passwordexporter.export-saved-desc "Export saved passwords to an XML or CSV file.">
-<!ENTITY passwordexporter.export-saved-encrypt "Encrypt Usernames/Passwords">
+<!ENTITY passwordexporter.export-saved-encrypt "Obfuscate Usernames/Passwords">
 <!ENTITY passwordexporter.export-saved-encrypt-accesskey "n">
 <!ENTITY passwordexporter.export-saved-button "Export Passwords">
 <!ENTITY passwordexporter.export-saved-button-accesskey "E">
@@ -26,7 +26,7 @@
 <!ENTITY passwordexporter.notice-title "Password Exporter Notice">
 <!ENTITY passwordexporter.notice-line1 "Thank you for installing Password Exporter!">
 <!ENTITY passwordexporter.notice-line2 "Before exporting, please note:">
-<!ENTITY passwordexporter.notice-line3 "This extension should be used at your own risk. It is possible for your exported password files to be stolen or accessed by other people, even if you encrypt them.">
+<!ENTITY passwordexporter.notice-line3 "This extension should be used at your own risk. It is possible for your exported password files to be stolen or accessed by other people, even if you obfuscate them.">
 <!ENTITY passwordexporter.notice-accept "I Accept">
 <!ENTITY passwordexporter.notice-accept-accesskey "A">
 <!ENTITY passwordexporter.notice-decline "I Decline">
